--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
             background: #444;
             color: white;
         }
-        #backCard{
+
+        #backCard {
             margin: 2px 5px;
         }
 
         /* Make cardDisplay fill available height and be scrollable if needed */
         #cardDisplay {
             display: block;
-            min-height: 80vh;   /* or 100vh */
+            min-height: 80vh; /* or 100vh */
             box-sizing: border-box;
             position: relative;
-            overflow: auto;     /* allow scrolling */
+            overflow: auto; /* allow scrolling */
             padding-bottom: 80px; /* give space so sticky footer won't overlap content */
         }
 
@@ -64,14 +65,14 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background: rgba(34,34,34,0.9);
+            background: rgba(34, 34, 34, 0.9);
             padding: 10px;
             display: flex;
             justify-content: center;
             z-index: 10;
         }
 
-        .turnHeaderHint{
+        .turnHeaderHint {
             color: white;
             font-size: 14px;
         }
@@ -114,6 +115,7 @@
         .phaseContainer {
             counter-reset: phaseItemCounter;
         }
+
         .phaseContainer,
         .phaseContainer * {
             background-color: #cfd2d1;
@@ -121,17 +123,19 @@
             text-align: left;
             font-size: 14px;
         }
+
         .phaseItem {
             position: relative; /* needed for absolute positioning of number */
             padding: 5px 5px 5px 30px; /* extra left padding for the number */
             border-top: 1px solid #000;
             border-bottom: 1px solid #000;
         }
+
         .phaseItem::before {
             counter-increment: phaseItemCounter; /* increment counter */
-            content: counter(phaseItemCounter);  /* display number */
+            content: counter(phaseItemCounter); /* display number */
             position: absolute;
-            left: 5px;  /* distance from left edge of phaseItem */
+            left: 5px; /* distance from left edge of phaseItem */
             top: 20px;
             font-size: 1.5em;
             /*top: 50%;    !* vertical center *!*/
@@ -145,18 +149,19 @@
             /*border-radius: 50%;     !* make it circular *!*/
             font-weight: bold;
         }
-        .phaseName{
+
+        .phaseName {
             text-transform: uppercase;
             font-weight: bold;
         }
 
-        .phaseHint{
+        .phaseHint {
             display: inline;
             text-transform: none;
         }
 
-        .phaseElement{
-            padding-left:5px;
+        .phaseElement {
+            padding-left: 5px;
             cursor: pointer;
             transition: all 0.2s;
         }
@@ -166,6 +171,7 @@
             background-color: #d4edda; /* green highlight */
             color: #155724;
         }
+
         .phaseElement.active, .phaseElement.active * {
             background-color: #d4edda; /* green highlight */
             color: #155724;
@@ -177,7 +183,7 @@
             opacity: 0.5;
         }
 
-        .phaseElement:before{
+        .phaseElement:before {
             content: "•";
             margin-right: 2px;
         }
@@ -225,8 +231,9 @@
 </div>
 
 <script>
-    const version = '3.8';
-    let maxPlayer = 4
+    const version = '3.9';
+    const useHumanCharacterImages = false;
+    let maxPlayers = 4;
     const characters = [
         {name: "Cad Bane", origin: "expansion", type: "bounty", image: "bane.png"},
         {name: "Boba Fett", origin: "base", type: "bounty", image: "boba.png"},
@@ -337,11 +344,11 @@
     }
 
     function toggleAddButton() {
-        addAnotherBtn.style.display = players.length >= maxPlayer - 1 ? "none" : "inline-block";
+        addAnotherBtn.style.display = players.length >= maxPlayers - 1 ? "none" : "inline-block";
     }
 
     addAnotherBtn.addEventListener("click", () => {
-        if (players.length >= maxPlayer) return;
+        if (players.length >= maxPlayers) return;
         if (!addPlayerFromForm()) return;
         playerCounter++;
         updatePlayerForm();
@@ -356,8 +363,7 @@
         startGame();
     });
 
-    function addPlayerFromForm()
-    {
+    function addPlayerFromForm() {
         clearError();
         const type = document.getElementById("playerType").value;
         const nickname = document.getElementById("playerNickname").value.trim() || document.getElementById("playerNickname").placeholder;
@@ -414,7 +420,6 @@
     });
 
 
-
     function startGame() {
         document.getElementById("step1").classList.add("hidden");
         document.getElementById("step2").classList.add("hidden");
@@ -439,23 +444,25 @@
         if (player.type === "human") {
             // Human card row
             cardType = 'human';
-            // const row1 = document.createElement("div");
-            // row1.style.display = "flex";
-            // row1.className = "phaseImage";
-            // row1.style.justifyContent = "center";
-            // row1.style.gap = "10px";
-            // const cardFile = gameMode === "base" ? "base a.png" : "expansion a.png";
-            // const img = document.createElement("img");
-            // img.src = `./images/player/${cardFile}` + '?' + version;
-            // const curSrc = img.src;
-            // img.addEventListener("click", () => {
-            //     const filename = new URL(img.src).pathname.split('/').pop();
-            //     const prefix = filename.slice(0, -5); // remove " a.png" or " b.png"
-            //     const suffix = filename.match(/([a-zA-Z])\.png$/)?.[1];
-            //     img.src = `./images/player/${prefix}${suffix == "a" ? "b" : "a"}.png` + '?' + version;
-            // });
-            // row1.appendChild(img);
-            // cardDisplay.appendChild(row1);
+            if (useHumanCharacterImages){
+                const row1 = document.createElement("div");
+                row1.style.display = "flex";
+                row1.className = "phaseImage";
+                row1.style.justifyContent = "center";
+                row1.style.gap = "10px";
+                const cardFile = gameMode === "base" ? "base a.png" : "expansion a.png";
+                const img = document.createElement("img");
+                img.src = `./images/player/${cardFile}` + '?' + version;
+                const curSrc = img.src;
+                img.addEventListener("click", () => {
+                    const filename = new URL(img.src).pathname.split('/').pop();
+                    const prefix = filename.slice(0, -5); // remove " a.png" or " b.png"
+                    const suffix = filename.match(/([a-zA-Z])\.png$/)?.[1];
+                    img.src = `./images/player/${prefix}${suffix == "a" ? "b" : "a"}.png` + '?' + version;
+                });
+                row1.appendChild(img);
+                cardDisplay.appendChild(row1);
+            }
 
             // Next button
             const row2 = document.createElement("div");
@@ -529,6 +536,12 @@
                 if (idx > -1) deck.splice(idx, 1);
 
                 aiHistory[player.nickname].push(card);
+
+                // Reshuffle immediately after special
+                if (card === "special") {
+                    aiDecks[player.nickname] = [];
+                    console.log(`AI ${player.nickname} reshuffle deck after special is triggered`);
+                }
             }
 
             // Log AI deck
@@ -557,11 +570,11 @@
             if (card === "special") {
                 const dir = player.character.type === "smuggler" ? "smuggler" : "bounty";
                 cardImg.src = `./images/${dir}/${player.character.image}` + '?' + version;
-                header.innerHTML  = `${player.nickname} (${player.character.name}) #Special${headerMarker}`;
+                header.innerHTML = `${player.nickname} (${player.character.name}) #Special${headerMarker}`;
             } else {
                 const dir = player.character.type === "smuggler" ? "smuggler" : "bounty";
                 cardImg.src = `./images/${dir}/${card}.png` + '?' + version;
-                header.innerHTML  = `${player.nickname} (${player.character.name}) #${card}${headerMarker}`;
+                header.innerHTML = `${player.nickname} (${player.character.name}) #${card}${headerMarker}`;
             }
 
             row0.appendChild(cardImg);
@@ -616,13 +629,14 @@
         describeCard(cardName, cardType);
     }
 
-    function shuffleAiDeck(characterType){
+    function shuffleAiDeck(characterType) {
         let deck = characterType === "smuggler"
-            ? (gameMode === "base" ? shuffleArray([...Array(10).keys()].map(n => n + 1)) : shuffleArray([1,2,6,7,9,"special"]))
-            : (gameMode === "base" ? shuffleArray([1,2,3,4,5]) : shuffleArray([1,2,3,4,5,"special"]));
+            ? (gameMode === "base" ? shuffleArray([...Array(10).keys()].map(n => n + 1)) : shuffleArray([1, 2, 6, 7, 9, "special"]))
+            : (gameMode === "base" ? shuffleArray([1, 2, 3, 4, 5]) : shuffleArray([1, 2, 3, 4, 5, "special"]));
         deck.justShuffled = true; // mark that the next card is first after shuffle
         return deck;
     }
+
     function describeCard(cardName, type) {
         /**  type: "human" | "bounty" | "smuggler"*/
         let cardContent = {
@@ -643,9 +657,9 @@
                 '<div class="phase1Element phaseElement">' +
                 'Recover all <span class="icon damage">damage</span> from character and ship' + '<br>' +
                 '<div style="padding-left: 30px;">' +
-                    '<em>*(required if you are defeated)</em>:' + '<br>' +
-                    ' · Pay 3 000 <span class="icon credits">credits</span>' + '<br>' +
-                    ' · Lose all <span class="icon secret">secrets</span>' +
+                '<em>*(required if you are defeated)</em>:' + '<br>' +
+                ' · Pay 3 000 <span class="icon credits">credits</span>' + '<br>' +
+                ' · Lose all <span class="icon secret">secrets</span>' +
                 '</div>' +
                 '</div>' +
                 '<div class="phase1Element phaseElement">Play any "<strong>Planning</strong>" on Player, Ship or any other card in your hand</div>' +
@@ -722,9 +736,9 @@
             cardContent.special =
                 '<div class="phaseItem multiplePhaseElements">' +
                 '<div class="phaseName">Special </div>' +
-                '<div class="phase3Element phaseElement">todo</div>'+
-                '<div class="phase3Element phaseElement">todo</div>'+
-                '<div class="phase3Element phaseElement">todo</div>'+
+                '<div class="phase3Element phaseElement">todo</div>' +
+                '<div class="phase3Element phaseElement">todo</div>' +
+                '<div class="phase3Element phaseElement">todo</div>' +
                 '</div>';
 
 
@@ -735,7 +749,7 @@
             .filter(value => value != null && value !== "")
             .join(''); // join into a single string
         html = '<div class="phaseContainer">' + html + '</div>';
-        cardDisplay.insertAdjacentHTML('afterbegin',html);
+        cardDisplay.insertAdjacentHTML('afterbegin', html);
 
         // document.querySelector('.phaseImage').style.display = 'none';
 
@@ -756,7 +770,7 @@
             const newEl = el.cloneNode(true); // remove old listeners
             el.replaceWith(newEl);
 
-            newEl.addEventListener('click', function() {
+            newEl.addEventListener('click', function () {
                 const parentPhaseItem = newEl.closest('.phaseItem');
                 const allElements = parentPhaseItem.querySelectorAll('.phaseElement');
 
