--- a/index.html
+++ b/index.html
@@ -755,9 +755,8 @@
                 '<div class="phase1Element phaseElement">' +
                 'Recover all <span class="icon damage">damage</span> from character and ship' + '<br>' +
                 '<div style="padding-left: 30px;">' +
-                '<em>*(required if you are defeated)</em>:' + '<br>' +
-                ' · Pay <span class="icon credits">credits </span>3 000' + '<br>' +
-                ' · Lose all secret cards' +
+                ' · Pay <span class="icon credits">credits </span>3 000 <em>(if defeated)</em>' + '<br>' +
+                ' · Lose all secret cards <em>(if defeated)</em>' +
                 '</div>' +
                 '</div>' +
                 '<div class="phase1Element phaseElement">Play any "<strong>Planning</strong>" on Player, Ship or any other card in your hand</div>' +
